--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,6 +35,7 @@ const { title } = Astro.props;
         <SEO
             title="Noel Pascal Schwabenland"
             description=""
+            noindex={true}
             openGraph={{
                 basic: {
                     title: '',
