improved design and added seo

--- a/src/components/about-card.astro
+++ b/src/components/about-card.astro
@@ -1,9 +1,9 @@
-<aside class="bg-gray dark:bg-[#0D131F] h-max xl:h-full text-black-100 dark:text-white-85 px-8 pb-8 text-sm rounded-b-[20px] xl:rounded-none">
-    <img src="IMG_0445.JPEG" class="w-32 h-32 my-6 rounded-full" alt="" />
+<aside class="bg-gray dark:bg-[#0D131F] h-max xl:h-full text-black-100 dark:text-white-85 px-8 pb-8 text-sm">
+    <img src="IMG_0445.JPEG" class="w-32 h-32 my-6" alt="" />
     <div class="flex flex-col gap-y-2">
         <div class="flex flex-col gap-y-1">
-            <h2 class="font-extrabold text-black-100 dark:text-white-100 text-xl">Noel Pascal Schwabenland</h2>
-            <small class="text-sm text-black-80 dark:text-white-85">Physics Student & Frontend Developer</small>
+            <h1 class="font-extrabold text-black-100 dark:text-white-100 text-xl">Noel Pascal Schwabenland</h1>
+            <h2 class="text-sm text-black-80 dark:text-white-85">Physics Student & Frontend Developer</h2>
             <div class="flex flex-row items-center gap-x-1 text-xs text-black-60 dark:text-white-60">
                 <!-- <Icon.SewingPin fill="#0D131F" width="20" height="20" /> -->
                 Saarbrücken, Germany
@@ -11,11 +11,12 @@
         </div>
         <div class="flex flex-col pt-6">
             <small class="text-xs pb-2 text-black-60 dark:text-white-60">Über mich</small>
-            <div class="text-sm text-black-80 dark:text-white-85">
-                Ich bin von der der computational und theoretischen Physik begeistert und blühe auf, wenn es darum geht, komplexe Probleme zu lösen während ich
-                immer nach neuen Herausforderungen suche. Mit meinem Hintergrund in der Frontend-Entwicklung bringe ich eine einzigartige Perspektive in meine
-                Arbeit ein, die technische Fähigkeiten mit analytischen Fähigkeiten verbindet.
-            </div>
+            <p class="text-sm text-black-80 dark:text-white-85">
+                Ich bin von der computergestützten und theoretischen Physik fasziniert und begeistert mich für die Lösung komplexer Probleme. Dabei suche ich stets
+                nach neuen Herausforderungen, um meine Fähigkeiten zu erweitern. Als Frontend-Entwickler bringe ich eine einzigartige Perspektive in meine Arbeit
+                ein, die technische Fähigkeiten mit analytischem Denken vereint. Insbesondere interessiere ich mich auch für machine learning und seine Anwendungen
+                in der Physik.
+            </p>
         </div>
         <div class="flex flex-col pt-6">
             <small class="text-xs pb-2 text-black-60 dark:text-white-60">Kontakt</small>
