turned on indexing

--- a/src/components/base/head.astro
+++ b/src/components/base/head.astro
@@ -25,7 +25,7 @@ import { SEO } from 'astro-seo';
     <SEO
         title="Noel Pascal Schwabenland"
         description="Ich bin Physiker mit Erfahrung in der Frontend-Entwicklung, bin begeistert von der computergestützten und theoretischen Physik sowie der Lösung komplexer Probleme."
-        noindex={true}
+        noindex={false}
         openGraph={{
             basic: {
                 title: 'Noel Pascal Schwabenland',
