--- a/src/pages/regler.astro
+++ b/src/pages/regler.astro
@@ -33,7 +33,7 @@ const { title } = Astro.props;
                     <div class="italic text-sm text-black-60">Punkte sind deine mittlere Abweichung der letzten 50 Datapoints</div>
                 </div>
             </div>
-            <div class="flex row">
+            <div class="flex row max-h-[600px]">
                 <canvas id="myChart"></canvas>
             </div>
         </main>
