--- a/src/pages/regler.astro
+++ b/src/pages/regler.astro
@@ -21,20 +21,23 @@ const { title } = Astro.props;
                 <!-- Input sliders -->
                 <div class="flex flex-col">
                     <div>Vstell</div>
-                    <input type="range" min="-100" max="100" step="0.1" value="0"  class="slider" id="vstell_slider" />
+                    <input type="range" min="-100" max="100" step="0.1" value="0" class="slider" id="vstell_slider" />
                 </div>
-                
+
                 <div class="flex flex-col ml-10">
                     <div>Punkte</div>
                     <div class="text-accent" id="punkte"></div>
                 </div>
-                
+
                 <div class="flex flex-col ml-10">
                     <div class="italic text-sm text-black-60">Punkte sind deine mittlere Abweichung der letzten 50 Datapoints</div>
                 </div>
             </div>
             <div class="flex row max-h-[600px]">
                 <canvas id="myChart"></canvas>
+                <div class="bg-black-100 w-20 flex flex-col items-end justify-end ml-10 mt-8 mb-2">
+                    <div id="waterlevel" class="bg-primary w-full h-[50%]"></div>
+                </div>
             </div>
         </main>
 
@@ -66,6 +69,11 @@ const { title } = Astro.props;
                 type: 'line',
                 data: data,
                 options: {
+                    elements: {
+                        point: {
+                            radius: 0
+                        }
+                    },
                     scaleShowLabels: false,
                     animation: {
                         duration: 0 // general animation time
@@ -92,18 +100,20 @@ const { title } = Astro.props;
             const chart = new Chart(ctx, config);
 
             function addDatapoint(x, y, i = 0) {
-                chart.data.labels.push(x);
+                if (i == 0) {
+                    chart.data.labels.push(x);
+                }
                 chart.data.datasets[i].data.push(y);
 
                 // Only show last 50 datapoints
-                if (chart.data.labels.length > 100) {
-                    chart.data.labels.shift();
-                    chart.data.datasets[i].data.shift();
-                }
+                // if (chart.data.labels.length > 100) {
+                //     if (i == 0) chart.data.labels.shift();
+                //     chart.data.datasets[i].data.shift();
+                // }
 
-                // Update x axis
-                // chart.options.scales.x.min = 0;
-                // chart.options.scales.x.max = x;
+                // Update x axis and show last 100 datapoints
+                chart.data.labels = chart.data.labels.slice(-100);
+                chart.data.datasets[i].data = chart.data.datasets[i].data.slice(-100);
 
                 chart.update();
             }
@@ -126,28 +136,32 @@ const { title } = Astro.props;
                 switch (systemType) {
                     case 0:
                         Vist = Math.max(0, Vist + 0.1 * Vstell);
-                        Vist = Math.min(100, Vist)
+                        Vist = Math.min(100, Vist);
                         break;
                     default:
                         break;
                 }
             }
 
-            let difs= [];
+            let difs = [];
 
             setInterval(() => {
                 const t = Date.now() - t0;
                 updateValueBySliders();
                 updateSystem(t);
                 addDatapoint(t, Vist);
-                addDatapoint(t, 50 + 25 * Math.sin((t / 1000)), 1);
+                addDatapoint(t, 50 + 25 * Math.sin(t / 1000), 1);
 
                 difs.push(Vsoll - Vist);
 
                 // Calculate mean of last 50 values
                 const mean = difs.slice(-50).reduce((a, b) => a + b, 0) / 50;
                 document.getElementById('punkte').innerHTML = mean.toFixed(2);
-            }, 250);
+
+                // Update waterlevel
+                const waterlevel = document.getElementById('waterlevel');
+                waterlevel.style.height = `${Vist}%`;
+            }, 100);
         </script>
     </body>
 </html>
