--- a/src/pages/regler.astro
+++ b/src/pages/regler.astro
@@ -1,19 +1,18 @@
 ---
 import * as Icon from '@astropub/icons';
 import AboutCard from '../components/about-card.astro';
-
 import Head from '../components/base/head.astro';
-export interface Props {
-    title?: string;
-}
-
-const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
 <html lang="en" class="">
+
+    <!-- Header placeholder -->
     <Head />
+
     <body class="bg-white-100 text-black-80">
+
+        <!-- ChartJs Library -->
         <script is:inline src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
         <main class="p-10 md:px-4 col-span-3 xl:col-span-2">
@@ -24,15 +23,19 @@ const { title } = Astro.props;
                     <input type="range" min="-100" max="100" step="0.1" value="0" class="slider" id="vstell_slider" />
                 </div>
 
+                <!-- Points -->
                 <div class="flex flex-col ml-10">
                     <div>Punkte</div>
                     <div class="text-accent" id="punkte"></div>
                 </div>
 
+                <!-- Infotext -->
                 <div class="flex flex-col ml-10">
                     <div class="italic text-sm text-black-60">Punkte sind deine mittlere Abweichung der letzten 50 Datapoints</div>
                 </div>
             </div>
+
+            <!-- Chart and visualization -->
             <div class="flex row max-h-[600px]">
                 <canvas id="myChart"></canvas>
                 <div class="bg-black-100 w-20 flex flex-col items-end justify-end ml-10 mt-8 mb-2">
@@ -97,19 +100,12 @@ const { title } = Astro.props;
                     }
                 }
             };
+
             const chart = new Chart(ctx, config);
 
             function addDatapoint(x, y, i = 0) {
-                if (i == 0) {
-                    chart.data.labels.push(x);
-                }
+                if (i == 0) chart.data.labels.push(x);
                 chart.data.datasets[i].data.push(y);
-
-                // Only show last 50 datapoints
-                // if (chart.data.labels.length > 100) {
-                //     if (i == 0) chart.data.labels.shift();
-                //     chart.data.datasets[i].data.shift();
-                // }
 
                 // Update x axis and show last 100 datapoints
                 chart.data.labels = chart.data.labels.slice(-100);
@@ -138,6 +134,7 @@ const { title } = Astro.props;
                         Vist = Math.max(0, Vist + 0.1 * Vstell);
                         Vist = Math.min(100, Vist);
                         break;
+                    /** Here can be other systems */
                     default:
                         break;
                 }
